k8s/config/ollama/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    prod-gateway-access: "true"
