k8s/config/ollama/endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ollama-external-service
  namespace: ollama
  labels:
    kubernetes.io/service-name: ollama-external-service
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.1.20"
    conditions:
      ready: true
ports:
  - name: http
    port: 11434
    protocol: TCP
