k8s/config/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
name: ollama-external-service
namespace: ollama
spec:
ports:
  - protocol: TCP
    port: 11434
    targetPort: 11434
