k8s/config/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ollama-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Access to Ollama API"
spec:
  ingressClassName: public
  rules:
  - host: ollama.arffornia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ollama-external-service
            port:
              number: 11434
  tls:
  - hosts:
    - ollama.arffornia.com
    secretName: ollama-tls
